# spots

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
modules/spots_cpp/: CMakeLists.txt
modules/spots_cpp/include/spots/: games.hpp  global.hpp
modules/spots_cpp/include/spots/games/sprouts/: boundary.hpp  land.hpp  position.hpp  region.hpp  sequence.hpp  structure.hpp  vertex.hpp
modules/spots_cpp/include/spots/solver/: basic_pns.hpp  dfpn.hpp  dfs.hpp  heuristics.hpp  logger.hpp  parallel_dfpn.hpp  parallel_group.hpp  pn2s.hpp  pns_tree_manager.hpp  solver.hpp
modules/spots_cpp/include/spots/solver/data_structures/: bucket_table.hpp  couple.hpp  mailbox.hpp  nimber.hpp  nimber_database.hpp  pns_database.hpp  pns_node.hpp  pns_tree.hpp  proof_numbers.hpp
modules/spots_cpp/python/: CMakeLists.txt  wrapper.cpp
modules/spots_cpp/src/: CMakeLists.txt
modules/spots_cpp/src/games/sprouts/: boundary.cpp  land.cpp  position.cpp  region.cpp  vertex.cpp
modules/spots_cpp/src/solver/: logger.cpp
modules/spots_cpp/src/solver/data_structures/: nimber.cpp
src/spots/: __init__.py  cli.py
src/spots/solvers/: config.py  parallel_solver.py  sequential_solver.py  stats_logger.py  worker_group.py
